Fixed the overlap

--- a/css/app.css
+++ b/css/app.css
@@ -51,6 +51,7 @@ body {
 }
 .header {
   width: 80%;
+  height: 80px;
   margin: 0 auto;
 }
 
